# inferc

./: .gitignore  CHALLENGES.md  CMakeLists.txt  DEMO.md  PROJECT.md  README.md  SESSIONS.md  V2_PLAN.md  pyproject.toml
bench/: bench_ort.py  bench_ort_gpt2_decode.py
bench/amx/: amx_attn_fused.cc  amx_batch_sweep.cc  amx_bnns_fc.cc  amx_bnns_graph.swift  amx_codebook_accuracy.cc  amx_codebook_gemm.cc  amx_codebook_gemm_scale.cc  amx_codebook_gptq.cc  amx_codebook_ilp.cc  amx_codebook_ilp_mt.cc  amx_codebook_int8.cc  amx_codebook_int8_perf.cc  amx_codebook_mcurve.cc  amx_codebook_mt.cc  amx_codebook_pergroup.cc  amx_codebook_rigor.cc  amx_confirm.cc  amx_core_occupancy.cc  amx_dualcluster.cc  amx_dualcluster_hard.cc  amx_dualcluster_v2.cc  amx_e2e.cc  amx_e2e_codebook.cc  amx_e2e_measured.cc  amx_energy_load.cc  amx_exp_ilp_sweep.cc  amx_extr_cost.cc  amx_extr_fold.cc  amx_ffn1_tune.cc  amx_fma16_microbench.cc  amx_fma16_mt_ceiling.cc  amx_fp16_acc_accuracy.cc  amx_fp16_accuracy.cc  amx_fp16_blocked_accuracy.cc  amx_fp16_ceiling.cc  amx_fp16_codebook.cc  amx_fp16_drain_cost.cc  amx_fp16_zlayout.cc  amx_genlut_exp.cc  amx_genlut_generate.cc  (+69 more)
bench/amx/llamacpp_shim/: README.md  amx_shim.h  ggml-blas.cpp.patch
docs/: AMX_REPORT.md  LITERATURE.md  PAPER2_DRAFT.md  PAPER2_PLAN.md  PAPER_DRAFT.md  PRIMER.md  build_paper2.sh  build_primer.sh  make_fig_mcurve.py  make_fig_optwaterfall.py  make_fig_panel_sweep.py  make_fig_scoreboard.py
docs/results_kaggle/: tinyllama_1b_g128_calib32k_p100.csv
scripts/: dump_ort_shapes.py  fetch_distilbert.py  fetch_gpt2.py  kaggle_bearer.py  make_gpt2_inputs.py  make_inputs.py  plot_amx.py  plot_prefill_results.py  vast_bearer.py
src/cli/: main.cpp
src/frontend/: onnx_loader.cc  onnx_loader.h  onnx_to_ir.cc  onnx_to_ir.h
src/ir/: graph.cc  graph.h  shape_inference.cc  shape_inference.h
src/ir/passes/: constant_fold.cc  constant_fold.h  fuse_matmul_add_gelu.cc  fuse_matmul_add_gelu.h  pass_utils.cc  pass_utils.h  recognize_attention.cc  recognize_attention.h  recognize_gelu.cc  recognize_gelu.h  recognize_layernorm.cc  recognize_layernorm.h
src/kernels/: activation.cc  activation.h  amx_gemm.cc  amx_gemm.h  amx_probe.cc  amx_probe.h  attention.cc  attention.h  elementwise.cc  elementwise.h  embedding.cc  embedding.h  fused_matmul_add_gelu.cc  fused_matmul_add_gelu.h  matmul.cc  matmul.h  movement.cc  movement.h
src/profiler/: profiler.cc  profiler.h
src/runtime/: executor.cc  executor.h  tensor.cc  tensor.h
src/util/: parallel.cc  parallel.h  version.cpp  version.h
tests/: CMakeLists.txt  amx_gemm_test.cc  amx_probe_test.cc  correctness_test.cc  kernels_test.cc  loader_test.cc  passes_test.cc  profiler_test.cc  shape_inference_test.cc  smoke_test.cc
